--- a/BottomsUp/BottomsUp.Web/app/proposals/index.html
+++ b/BottomsUp/BottomsUp.Web/app/proposals/index.html
@@ -25,7 +25,7 @@
                     </tr>
                     <tr ng-repeat="p in vm.proposals">
                         <td>
-                            <a data-ng-href="#/proposals/{{p.id}}/requirements">{{p.name}}</a>
+                            <a ui-sref="requirements({ pid: p.id })">{{p.name}}</a>
                         </td>
                         <td>{{p.modifiedBy}}</td>
                         <td>{{p.created | date:'medium' }}</td>
